# llm-steering

./: .gitmodules  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: folder_structure_plan.md  workflow_diagram.md
scripts/: _score_with_judge_subprocess.py  compute_wrmd.py  extract_activations.py  find_best_layers.py  merge_steering.py  optimize_alpha.py  test_steering.py
src/activation_steering/: __init__.py  analysis.py  computation.py  extraction.py  merge_steering_into_weights.py  steering.py  utils.py
